<resources>
    <string name="app_name">RMS_SKONDA</string>
    <string name="title_activity_enroll">Enroll</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="stuedent_report">Student Report</string>
    <string name="fee_report">Fee Report</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_contact">Contact No</string>
    <string name="hint_address">Address</string>
    <string name="hint_course">Course</string>
    <string name="hint_channel">Channel</string>
    <string name="hint_education">Education Details</string>
    <string name="hint_doe">Date of Enquiry</string>
    <string name="hint_doj">Date Of Joining</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_status">Status</string>
    <string name="hint_discount">Fee Discount</string>
    <string name="hint_comments">Comments</string>
    <string name="hint_message">Message</string>
    <string name="hint_phone">Phone Number</string>
    <string name="title_activity_sms">sms</string>
    <string name="hint_balance">Enter Amount</string>
    <string name="hint_date">Date Paid</string>
    <string name="hint_mode">Mode of payment</string>
    <string name="title_activity_feepay">Fee payment</string>
    <string name="title_activity_editStudent">Edit Student</string>
    <string-array name="mode_spinner">
        <item>Mode of Payment</item>
        <item>Cash</item>
        <item>Card Payment</item>
        <item>Online Transaction</item>
    </string-array>
    <string name="channel_prompt">Choose a channel</string>
    <string-array name="channel_array">
        <item>select channel</item>
        <item>google ad</item>
        <item>just dial</item>
        <item>reference</item>
        <item>sulekha</item>
    </string-array>
    <string name="course_prompt">Choose a course</string>
    <string-array name="course_array">
        <item>java</item>
        <item>android</item>
        <item>angularjs</item>
        <item>javascript</item>
    </string-array>
    <string name="title_activity_edit_student">EditStudent</string>
</resources>
